--- a/resources/main.css
+++ b/resources/main.css
@@ -1,5 +1,10 @@
 body {font-family: Arial, Helvetica, sans-serif;}
 
+img {
+    image-orientation: from-image;
+    padding-bottom: 20px;
+}
+
 /* The Modal (background) */
 .modal {
     display: none; /* Hidden by default */
